--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_map: ^6.1.0
   latlong2: ^0.9.0
   flutter_svg: ^2.0.9
+  hive: ^2.2.3
+  http: ^1.2.0
 
 dev_dependencies:
   flutter_test:
